<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/chat_bottom_shape" >

        <Button
            android:id="@+id/voice_msg"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dip"
            android:background="@drawable/voice_msg"
            android:visibility="visible" />

        <Button
            android:id="@+id/keyboard"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dip"
            android:background="@drawable/keyboard"
            android:visibility="gone" />

        <com.iflytek.im.demo.ui.view.MsgEditText
            android:id="@+id/input_sms"
            style="@style/cusur_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dip"
            android:layout_marginRight="7dip"
            android:layout_toLeftOf="@+id/image_face"
            android:layout_toRightOf="@id/voice_msg"
            android:background="@null"
            android:hint="@string/edittext_notice_0"
            android:maxLength="300"
            android:maxLines="2"
            android:padding="4dip"
            android:textColor="@color/black"
            android:textSize="16sp" >

            <requestFocus android:background="@color/black" />
        </com.iflytek.im.demo.ui.view.MsgEditText>

        <Button
            android:id="@+id/send_sms"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/voice_msg"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/voice_msg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="#578fbe"
            android:textSize="14sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/other_func"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/other_func"
            android:gravity="center" />

        <Button
            android:id="@+id/image_face"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_centerVertical="true"
            android:layout_marginRight="13dip"
            android:layout_toLeftOf="@id/other_func"
            android:background="@drawable/chat_emo_normal"
            android:visibility="visible" />

        <com.iflytek.im.demo.ui.view.AudioRecorderButton
            android:id="@+id/sound_recording"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:layout_toLeftOf="@+id/image_face"
            android:layout_toRightOf="@id/voice_msg"
            android:background="@drawable/button_shape"
            android:text="@string/btn_press_and_talk"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray" />

    <cn.dreamtobe.kpswitch.widget.KPSwitchPanelLinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/panel_root"
        android:visibility="gone">

        <include
            android:id="@+id/chat_face_container"
            layout="@layout/chat_face_container"
             />

        <include
            android:id="@+id/other_func_detail"
            layout="@layout/other_function_summary"
            />

    </cn.dreamtobe.kpswitch.widget.KPSwitchPanelLinearLayout>

</LinearLayout>